exports[`test the manage button handling an onclick event 1`] = `
<li
  className="egXAfz">
  <img
    alt=""
    className="kIQXBD"
    src="" />
  <div
    className="cExHXP" />
  <span
    className="eTSnel">
    yoast.com
  </span>
  <span
    className="ewETtX">
    <div>
      <span
        aria-label="Yoast SEO is inactive"
        className="gUXWlw"
        role="img" />
      <span
        aria-label="Local SEO is inactive"
        className="czkLho"
        role="img" />
      <span
        aria-label="Video SEO is active"
        className="kSlIAP"
        role="img" />
      <span
        aria-label="News SEO is inactive"
        className="icqtKc"
        role="img" />
      <span
        aria-label="WooCommerce SEO is active"
        className="eXOupU"
        role="img" />
      <span
        aria-label="Local SEO for Woo is inactive"
        className="XVeDT"
        role="img" />
    </div>
  </span>
  <button
    className="kTxWZ"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</li>
`;

exports[`test the manage button handling an onclick event 2`] = `
<li
  className="egXAfz">
  <img
    alt=""
    className="kIQXBD"
    src="" />
  <div
    className="cExHXP" />
  <span
    className="eTSnel">
    yoast.com
  </span>
  <span
    className="ewETtX">
    <div>
      <span
        aria-label="Yoast SEO is inactive"
        className="gUXWlw"
        role="img" />
      <span
        aria-label="Local SEO is inactive"
        className="czkLho"
        role="img" />
      <span
        aria-label="Video SEO is active"
        className="kSlIAP"
        role="img" />
      <span
        aria-label="News SEO is inactive"
        className="icqtKc"
        role="img" />
      <span
        aria-label="WooCommerce SEO is active"
        className="eXOupU"
        role="img" />
      <span
        aria-label="Local SEO for Woo is inactive"
        className="XVeDT"
        role="img" />
    </div>
  </span>
  <button
    className="kTxWZ"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</li>
`;

exports[`test the site component matches the snapshot 1`] = `
<li
  className="egXAfz">
  <img
    alt=""
    className="kIQXBD"
    src="" />
  <div
    className="cExHXP" />
  <span
    className="eTSnel">
    yoast.com
  </span>
  <span
    className="ewETtX">
    <div>
      <span
        aria-label="Yoast SEO is inactive"
        className="gUXWlw"
        role="img" />
      <span
        aria-label="Local SEO is inactive"
        className="czkLho"
        role="img" />
      <span
        aria-label="Video SEO is active"
        className="kSlIAP"
        role="img" />
      <span
        aria-label="News SEO is inactive"
        className="icqtKc"
        role="img" />
      <span
        aria-label="WooCommerce SEO is active"
        className="eXOupU"
        role="img" />
      <span
        aria-label="Local SEO for Woo is inactive"
        className="XVeDT"
        role="img" />
    </div>
  </span>
  <button
    className="kTxWZ"
    onClick={undefined}
    type="button">
    Manage
  </button>
</li>
`;
